[gd_scene load_steps=12 format=2]

[ext_resource path="res://script/main_menu.gd" type="Script" id=1]
[ext_resource path="res://asset/runner (11).png" type="Texture" id=2]
[ext_resource path="res://asset/button_main.png" type="Texture" id=3]
[ext_resource path="res://asset/button_main_hover.png" type="Texture" id=4]
[ext_resource path="res://asset/button_about_hover.png" type="Texture" id=5]
[ext_resource path="res://asset/button_about.png" type="Texture" id=6]
[ext_resource path="res://asset/button_help.png" type="Texture" id=7]
[ext_resource path="res://asset/button_help_hover.png" type="Texture" id=8]
[ext_resource path="res://asset/01 Fallout 4 Main Theme.mp3" type="AudioStream" id=9]
[ext_resource path="res://asset/button_exit_hover.png" type="Texture" id=10]
[ext_resource path="res://asset/button_exit.png" type="Texture" id=11]

[node name="main_menu" type="Node2D"]
position = Vector2( -259, -237 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 256.0
margin_top = 236.0
margin_right = 1279.0
margin_bottom = 835.0
texture = ExtResource( 2 )
expand = true

[node name="button_play" type="TextureButton" parent="."]
margin_left = 348.0
margin_top = 438.0
margin_right = 586.0
margin_bottom = 501.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true

[node name="button_about" type="TextureButton" parent="."]
margin_left = 347.0
margin_top = 515.0
margin_right = 587.0
margin_bottom = 578.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
expand = true

[node name="button_help" type="TextureButton" parent="."]
margin_left = 345.0
margin_top = 593.0
margin_right = 588.0
margin_bottom = 656.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="button_exit" type="TextureButton" parent="."]
margin_left = 346.0
margin_top = 671.0
margin_right = 589.0
margin_bottom = 734.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true

[connection signal="pressed" from="button_play" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="button_about" to="." method="_on_button_about_pressed"]
[connection signal="pressed" from="button_help" to="." method="_on_button_help_pressed"]
